[gd_scene load_steps=8 format=3 uid="uid://ea1vv35xsnnh"]

[ext_resource type="Script" uid="uid://0vxyre3kjapb" path="res://objects/scripts/breakable_block.gd" id="1_pq13p"]
[ext_resource type="Texture2D" uid="uid://cppwn8d4phur2" path="res://assets/objects/cracked_tile.png" id="1_xsgo5"]
[ext_resource type="Texture2D" uid="uid://caxx44yxcoe20" path="res://assets/particles/box_gib.png" id="3_e0wwo"]
[ext_resource type="AudioStream" uid="uid://divo1etyw4jkc" path="res://assets/sound/crate_break.wav" id="4_7vn0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq13p"]
size = Vector2(256, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyf73"]
size = Vector2(256, 128)

[sub_resource type="Curve" id="Curve_siutg"]
_data = [Vector2(0, 1), 0.0, -0.0964645, 0, 0, Vector2(1, 0), -3.05618, 0.0, 0, 0]
point_count = 2

[node name="CrackedTile" type="StaticBody2D"]
collision_layer = 33
script = ExtResource("1_pq13p")

[node name="SolidCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pq13p")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_xsgo5")
hframes = 2

[node name="DropArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropArea"]
position = Vector2(0, -192)
shape = SubResource("RectangleShape2D_hyf73")

[node name="BreakParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 4
texture = ExtResource("3_e0wwo")
lifetime = 0.5
one_shot = true
speed_scale = 1.3
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 590)
initial_velocity_min = 323.24
initial_velocity_max = 353.54
angular_velocity_min = 290.91
angular_velocity_max = 305.45
angle_min = -411.2
angle_max = 349.1
scale_amount_curve = SubResource("Curve_siutg")

[node name="BreakSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7vn0l")
volume_db = -20.0
bus = &"Sounds"

[connection signal="body_entered" from="DropArea" to="." method="_on_drop_area_body_entered"]
[connection signal="body_exited" from="DropArea" to="." method="_on_drop_area_body_exited"]
